--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cXVpY2stdnVsdHVyZS0zMi5jbGVyay5hY2NvdW50cy5kZXYk
-CLERK_SECRET_KEY=sk_test_xSjFNbi8ujrkpx4j38uaSJFSAICOesyQdiYmpkQ2I0
+MONGO_URI=mongodb+srv://webrizen:3oagCtPDx0xSdJ6m@siteshowcase.lghvfyv.mongodb.net
